[gd_scene load_steps=2 format=3 uid="uid://b2uvktx0jjqo4"]

[ext_resource type="Script" uid="uid://k4grr2mepba6" path="res://game/ui/menus/game_start_menu/game_start_menu.gd" id="1_5nwvv"]

[node name="GameStartMenu" type="PanelContainer"]
offset_right = 562.0
offset_bottom = 472.0
script = ExtResource("1_5nwvv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="StartNewGameContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GameNameEntry" type="LineEdit" parent="VBoxContainer/StartNewGameContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "New game name"

[node name="GameStartButton" type="Button" parent="VBoxContainer/StartNewGameContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start new game"

[node name="GameStartHostButton" type="Button" parent="VBoxContainer/StartNewGameContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Host new game"

[node name="GameListScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GameList" type="VBoxContainer" parent="VBoxContainer/GameListScrollContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/StartNewGameContainer2/GameStartButton" to="." method="_on_game_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartNewGameContainer2/GameStartHostButton" to="." method="_on_game_start_host_button_pressed"]
